Updates from Overleaf

--- a/ausarbeitung-latex/text/2.tex
+++ b/ausarbeitung-latex/text/2.tex
@@ -32,6 +32,6 @@ Durch den Einsatz von Operational \& Real-Time BI kann es zu Kosteneinparungen k
 
 Ein Hauptmerkmal von Operational \& Real-Time BI-Systemen ist die Entscheidungsfindung bzw. das Ableiten von Maßnahmen ohne Latenz. Diese Entscheidungsfindung übernimmt eine Decision-Engine, die in der Regel Entscheidungen auf Basis von Kennzahlen trifft. Es ist sehr komplex, qualitative Faktoren, die bei menschlichen Entscheidungen eine Rolle spielen, in solch einer Decision-Engine abzubilden.\autocite[Vgl.][4]{Azvine2006} So kann es vorkommen, dass es durch Operational \& Real-Time BI zu falschen Entscheidungen / Maßnahmen kommt, da ausschließlich quantitative Faktoren berücksichtigt wurden.
 
-Operational \& Real-Time BI-Systeme benötigen eine Vielzahl von Daten. Diese gibt es in Zeiten vom Internet, Sensoren und Informationssystemen zu genüge. Die Herausforderung ist, nicht Daten zu bekommen, sondern Daten zum richtigen Zeitpunkt in der richtigen Qualität. \autocite[Vgl.][160]{Azvine2007} So sind Operational \& Real-Time BI-Systeme in höchstem Maße davon abhängig, dass sie Daten in ausreichender Qualität zum richtigen Zeitpunkt bekommen, um funktionieren zu können. 
+Operational \& Real-Time BI-Systeme benötigen eine Vielzahl von Daten. Diese gibt es in Zeiten vom Internet, Sensoren und Informationssystemen zu genüge. Die Herausforderung ist nicht Daten zu bekommen, sondern Daten zum richtigen Zeitpunkt in der richtigen Qualität zu haben. \autocite[Vgl.][160]{Azvine2007} So sind Operational \& Real-Time BI-Systeme in höchstem Maße davon abhängig, dass Daten in ausreichender Qualität zum richtigen Zeitpunkt vorliegen, um funktionieren zu können. 
 
 Wie man an den Vor- und Nachteilen erkennen kann, ist ein Einsatz von Operational \& Real-Time BI nicht immer notwendig. In der Praxis muss geprüft werden, ob ein Einsatz sinnvoll ist und ob Operational \& Real-Time BI den eigenen Anforderungen gerecht wird. Hier gilt es eine Kosten-Risiko Abwägung vorzunehmen. Nichtsdestotrotz kann durch Operational \& Real-Time BI ein signifikanter Wettbewerbsvorteil erreicht werden. 
