--- a/ausarbeitung-latex/text/3.tex
+++ b/ausarbeitung-latex/text/3.tex
@@ -117,7 +117,7 @@ Die \ac{DB}, sowie die Web-UI's werden über noez.de gehostet. Die beiden Web-UI
 Für die verwendeten Tools wurde sich in dieser Ausarbeitung entschieden, da sie die für Real-Time \ac{BI} nötigen Funktionen im vollen Umfang kostenfrei zur Verfügung stellen. Insbesondere sind hiermit Datensynchronisation und Kollaboration gemeint. Andere Tools wie beispielsweise Microsoft Power BI bieten diesen Funktionsumfang ausschließlich in der kostenpflichtingen, professionellen Version.
 
 \section{Anwendung Operational \& Real-Time BI} \label{abs:anwOP}
-Die Anwendung der Konzepte lässt sich in zwei Bereiche unterscheiden:
+Die Anwendung der Konzepte\footnote{Eine Video-Demo kann unter folgenden Link abgerufen werden: \url{https://youtu.be/xnNvUQCp5Rk}} lässt sich in zwei Bereiche unterscheiden:
 \begin{itemize}
     \item \textbf{Dashboard Bestellungen} (Abb. \ref{fig:DashBest}): Hierbei handelt es sich um eine Echtzeit-Übersicht der Bestellungen und verbundenen Kennzahlen. Damit stellt dieses Dashboard eine betriebswirtschaftliche Perspektive auf den aktuellen und zukünftigen Produktionsstatus dar. Es können beispielsweise Einkaufs- und Preisbildungsentscheidungen getroffen werden.
     \item \textbf{Dashboard Produktion} (Abb. \ref{fig:DashProd}): Hierbei handelt es sich um eine operative Sicht auf die Produktion. Es wird der aktuelle Status der Produktionshalle dargestellt, um operative Entscheidungen in Hinblick auf Maschinen und Produktion abzuleiten.
